--- a/src/_includes/postlist.njk
+++ b/src/_includes/postlist.njk
@@ -1,5 +1,17 @@
 <ul>
-    {% for post in collections.posts %}
-        <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+    {% for post in collections.posts | reverse -%}
+        <li>
+            <h2>
+                <a href="{{ post.url }}">
+                    {{ post.data.title }}
+                </a>
+            </h2>
+            <p>
+                {{ post.data.details }} 
+            </p>
+            <div>
+                {{ post.data.summary }} 
+            </div>
+        </li>
     {% endfor %}
 </ul>
