--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,3 +45,13 @@ li {
   min-height: 21px;
   min-width: 50px;
 }
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
