--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,7 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
+  
+  <title>
+    {% if page.url == "/" %}
+      {{ site.name }}
+    {% else %}
+      {{ title }} | {{ site.name }}
+    {% endif %}
+  </title>
+  
+  <meta name="description" content="{{ description or site.description }}">
+
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
