--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -2,6 +2,6 @@
 layout: base.njk
 ---
 
-<a href="../">Back to main</a>
+<a href="../">Go back to the list of posts</a>
 
 <article>{{ content | safe}}</article>
