--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,25 @@
     {% endif %}
   </title>
   
-  <meta name="description" content="{{ description or site.description }}">
+  <meta name="description" content="{{ description or site.description or 'An internet blog from the troubled mind of a web developer' }}" />
+  <meta name="author" content="Damien Robson" />
+  <meta name="language" content="en" />
+
+  <link rel="icon" href="/icons/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#222222" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="{{ title }} | damienrobson" />
+  <meta property="og:description" content="{{ description or 'An internet blog from the troubled mind of a web developer' }}" />
+  <meta property="og:url" content="https://damienrobson.netlify.app{{ page.url }}" />
+  <meta property="og:image" content="https://damienrobson.netlify.app/images/social-preview.png" />
+
+  <link rel="shortcut icon" href="/icons/favicon.ico" />
 
   <link rel="stylesheet" href="/css/style.css" />
 </head>
