Adds a now page

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -31,6 +31,7 @@
   <meta property="og:image" content="https://damienrobson.netlify.app/images/social-preview.png" />
 
   <link rel="shortcut icon" href="/icons/favicon.ico" />
+  <link rel="canonical" href="https://damienrobson.netlify.app/">
 
   <link rel="stylesheet" href="/css/style.css" />
 </head>
