--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,11 @@ body {
   padding: 0 10px;
   font-family: Tahoma, Calibri, Helvetica, Arial, Verdana, "Times New Roman",
     sans-serif;
+
+  a:focus-visible {
+    outline: 9px double black;
+    box-shadow: 0 0 0 6px white;
+  }
 }
 
 h1,
@@ -41,4 +46,37 @@ ol > li {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+div.inline-image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
+
+img {
+  max-height: 210px;
+  max-width: 300px;
+  border: 1px solid black;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #ddd;
+    background: #222;
+  }
+
+  a {
+    color: #bbeeee;
+  }
+
+  a:focus-visible {
+    outline: 9px double white;
+    box-shadow: 0 0 0 6px black;
+  }
+
+  img {
+    border: 1px solid white;
+  }
 }
